Fixed styles and wrapping of LemonSnack

--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -114,6 +114,9 @@ $_lifecycle_dormant: #f86234;
     --primary-bg-hover: var(--primary-highlight);
     --primary-bg-active: #{$_primary_bg_active};
 
+    // Special case color for primary buttons with a nested primary button
+    --primary-button-nested-hover: #d2dbff;
+
     --bg-mid: #f2f2f2;
     --bg-side: #fafaf9;
     --bg-depth: #0f0f0f;
